deploy/k8s/client-react/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-react-deployment
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: client-react
  replicas: 1
  template:
    metadata:
      labels:
        app: client-react
    spec:
      containers:
        - name: client-react
          image: hkdarealest/devops-directive-docker-course-client-react-nginx:0.1.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: nginx-config
          configMap:
            defaultMode: 420
            name: client-react-nginx-config
